Test for Minimum Cuts to Divide a Circle.